syntax = "proto3";

package v1;

option go_package = "./v1";

import "v1/meta.proto";
import "v1/quota.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service ProjectService {
    rpc Create(ProjectCreateRequest) returns (ProjectResponse) {
        option (google.api.http) = {
            put: "/v1/project/{project.meta.id}"
            body: "*"
        };
    };
    rpc Update(ProjectUpdateRequest) returns (ProjectResponse) {
        option (google.api.http) = {
            post: "/v1/project/{project.meta.id}"
            body: "*"
        };
    };
    rpc Delete(ProjectDeleteRequest) returns (ProjectResponse) {
        option (google.api.http) = {
            delete: "/v1/project/{id}"
        };
    };
    rpc Get(ProjectGetRequest) returns (ProjectResponse) {
        option (google.api.http) = {
            get: "/v1/project/{id}"
        };
    };
    rpc GetHistory(ProjectGetHistoryRequest) returns (ProjectResponse) {
        option (google.api.http) = {
            post: "/v1/project/{id}/history"
        };
    };
    rpc Find(ProjectFindRequest) returns (ProjectListResponse) {
        option (google.api.http) = {
            post: "/v1/project"
            body: "*"
        };
    };
}

// Project is the database model
message Project {
    Meta meta = 1;
    string name = 2;
    string description = 3;
    string tenant_id = 4;
    QuotaSet quotas = 5;
}

message ProjectCreateRequest {
    Project project = 1;
}

message ProjectUpdateRequest {
    Project project = 1;
}

message ProjectDeleteRequest {
    string id = 1;
}

message ProjectGetRequest {
    string id = 1;
}

message ProjectGetHistoryRequest {
    string id = 1;
    google.protobuf.Timestamp at = 2;
}

message ProjectFindRequest {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue description = 3;
    google.protobuf.StringValue tenant_id = 4;
}

message ProjectResponse {
    Project project = 1;
}

message ProjectListResponse {
    repeated Project projects = 1;
}
